# pluggy-rs

./: Cargo.toml
examples/: connect.rs  connectors.rs  item.rs
src/: auth.rs  lib.rs
src/resources/: category.rs  connector.rs  execution.rs  item.rs  mod.rs  validation.rs  webhook.rs
