[package]
name = "pluggy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper-tls = "0.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
