[package]
name = "pluggy"
description = "API bindings for Pluggy written in Rust"
authors = ["Federico Miras <federico@pluggy.ai>"]
keywords = ["pluggy", "api", "async"]
categories = ["api-bindings"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper-tls = "0.5.0"

[dev-dependencies]
jsonwebtoken = "8.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
